boreal/tests/assets/invalid_files/parsing/regex_class_range_invalid.yar
rule a {
    strings:
        $a = /[z-a]/
    condition:
        $a
}
